<resources>
    <string name="app_name">Auth</string>


    <string name="facebook_app_id">1057239681359220</string>
    <string name="fb_login_protocol_scheme">fb1057239681359220</string>
    <string name="signout">SignOut</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login_now">Login Now</string>
    <string name="please_login_to_continue">Please login to continue</string>
    <string name="enter_via_social_networks">Enter via social networks</string>
    <string name="or_login_with_email">or login with email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="signup_now">SignUp Now</string>
    <string name="please_signup_to_continue">Please signup to continue</string>
    <string name="_login_with_mobile">or login with mobile number</string>
    <string name="mobile_no">Mobile no</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verification">Verification</string>
    <string name="back_to_login">Back to login</string>

</resources>