<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_now"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_login_to_continue"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_via_social_networks"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebookSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <ImageView
                android:id="@+id/facebookCusBtn"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/com_facebook_button_icon"
                android:background="@drawable/com_facebook_button_background"
                android:layout_alignParentStart="true"/>
            <ImageButton
                android:id="@+id/googleSignIn"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/googleg_standard_color_18"
                android:background="@drawable/button_border"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_login_with_mobile"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/mobile_no"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/button_border"
                android:autofillHints=""
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/submitMobile"/>
            <Button
                android:id="@+id/submitMobile"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_baseline_arrow_forward_24"/>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/head"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_login_with_email"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/button_border"
            android:autofillHints=""
            tools:ignore="TextFields"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/loginPass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/button_border"
            android:autofillHints=""
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/com_facebook_button_background"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />
        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/sign_up"
            android:textColor="@android:color/holo_blue_dark"
            android:textAllCaps="false" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/mainProgress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>