<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_now"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_signup_to_continue"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/signUpEmailMobile"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/email"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/button_border"
            android:autofillHints=""
            tools:ignore="TextFields" />
        <EditText
            android:id="@+id/signUpPass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/button_border"
            android:autofillHints=""
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/button_border"
            android:autofillHints=""
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/submitSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/com_facebook_button_background"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account" />
            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/login"
                android:textColor="@android:color/holo_blue_dark"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/mainProgress"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>