<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MobileAuth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/otpForVerification"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/enter_otp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/button_border"
                android:autofillHints=""
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/verifyPhoneOtp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_baseline_arrow_forward_24"/>

        </LinearLayout>
        <ProgressBar
            android:id="@+id/mainProgress"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login" />
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login"
            android:textColor="@android:color/holo_blue_dark"
            android:textAllCaps="false" />
    </LinearLayout>

</RelativeLayout>